--- a/views/layouts/1.hbs
+++ b/views/layouts/1.hbs
@@ -17,7 +17,7 @@
         <meta name="twitter:description" content="A portfolio of all of Reece Barker's projects and achievements for potential employers.">
         <meta name="twitter:image" content="{{URL 'utils/img/svg/favicon.svg'}}">
         <script>document.getElementsByTagName("html")[0].className += " js";</script>
-        <link rel="icon" type="image/svg+xml" href="{{URL 'utils/img/svg/favicon.svg'}}">
+        <link rel="icon" type="image/svg+xml" href="{{URL 'utils/img/png/favicon.png'}}">
         <link rel="alternate icon" href="{{URL 'utils/img/ico/favicon.ico'}}" type="image/ico">
         <link id="css" rel="stylesheet" href="{{URL 'utils/scss/.dir/~css.css'}}">
         <script src="https://kit.fontawesome.com/21df1375d2.js" crossorigin="anonymous"></script>
