--- a/views/layouts/1.hbs
+++ b/views/layouts/1.hbs
@@ -5,16 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:email" content="reecenbarker@gmail.com" />
-        <meta name="description" content="A portfolio of all of Reece Barker's projects and achievements for potential employers.">
-        <meta property="og:url" content="https://www.reece-barker.co/">
+        <meta name="description" content="Cabbage Goers is an interesting and entertaining podcast about silly conversations between friends.">
+        <meta property="og:url" content="http://www.cabbage-goers.co/">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Portfolio for Reece Barker">
-        <meta property="og:description" content="A portfolio of all of Reece Barker's projects and achievements for potential employers.">
+        <meta property="og:title" content="Cabbage Goers">
+        <meta property="og:description" content="Cabbage Goers is an interesting and entertaining podcast about silly conversations between friends.">
         <meta property="og:image" content="{{URL 'utils/img/svg/favicon.svg'}}">
         <meta name="twitter:card" content="{{URL 'utils/img/svg/favicon.svg'}}">
-        <meta property="twitter:url" content="https://www.reece-barker.co/">
-        <meta name="twitter:title" content="Portfolio for Reece Barker">
-        <meta name="twitter:description" content="A portfolio of all of Reece Barker's projects and achievements for potential employers.">
+        <meta property="twitter:url" content="http://www.cabbage-goers.co/">
+        <meta name="twitter:title" content="Cabbage Goers">
+        <meta name="twitter:description" content="Cabbage Goers is an interesting and entertaining podcast about silly conversations between friends.">
         <meta name="twitter:image" content="{{URL 'utils/img/svg/favicon.svg'}}">
         <script>document.getElementsByTagName("html")[0].className += " js";</script>
         <link rel="icon" type="image/svg+xml" href="{{URL 'utils/img/png/favicon.png'}}">
